--- a/index.html
+++ b/index.html
@@ -163,116 +163,152 @@
         </div>
       </section>
      
-      <!-- <section class="team-section">
+      <section class="team-section">
         <div class="container">
-          <h2 class="team-title section-title title">Наша команда</h2>
+          <h2 class="team-title title">Наша команда</h2>
           <ul class="members-list list">
             <li class="item">
-              <img class="member-foto" src="./images/photo1.jpg" alt="Фото Игоря Демьяненко" width="270" />
+              <img class="member-foto" 
+              srcset="
+              ./images/mobile/mobile-photo-1.jpg 450w,
+              ./images/mobile/mobile-photo-1@2x.jpg 900w,
+              ./images/tablet/tablet-photo-1.jpg 354w,
+              ./images/tablet/tablet-photo-1@2x.jpg 708w,
+              ./images/desktop/desktop-photo-1.jpg 270w,
+              ./images/desktop/desktop-photo-1@2x.jpg 540w" 
+              src="./images/mobile/mobile-photo-1.jpg" alt="Фото Игоря Демьяненко" 
+              sizes="(min-width: 768px) 25vw, (min-width: 480px) 50vw" />
               <h3 class="member-name title">Игорь Демьяненко</h3>
               <p class="member-position" lang="en">Product Designer</p>
               <ul class="list social-list">
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#instagram"></use>
+                      <use href="./images/svg/sprite.svg#instagram"></use>
                     </svg></a></li>
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#twitter"></use>
+                      <use href="./images/svg/sprite.svg#twitter"></use>
                     </svg></a></li>
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#facebook"></use>
+                      <use href="./images/svg/sprite.svg#facebook"></use>
                     </svg></a></li>
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#linkedin"></use>
+                      <use href="./images/svg/sprite.svg#linkedin"></use>
                     </svg></a></li>
               </ul>
             </li>
             <li class="item">
-              <img class="member-foto" src="./images/photo2.jpg" alt="Фото Ольги Репиной" width="270" />
+              <img class="member-foto"
+              srcset="
+              ./images/mobile/mobile-photo-2.jpg 450w,
+              ./images/mobile/mobile-photo-2@2x.jpg 900w,
+              ./images/tablet/tablet-photo-2.jpg 354w,
+              ./images/tablet/tablet-photo-2@2x.jpg 708w,
+              ./images/desktop/desktop-photo-2.jpg 270w,
+              ./images/desktop/desktop-photo-2@2x.jpg 540w"
+              src="./images/mobile/mobile-photo-2.jpg" alt="Фото Ольги Репиной" 
+              sizes="(min-width: 768px) 25vw, (min-width: 480px) 50vw" />
               <h3 class="member-name title">Ольга Репина</h3>
               <p class="member-position" lang="en">Frontend Developer</p>
               <ul class="list social-list">
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#instagram"></use>
+                      <use href="./images/svg/sprite.svg#instagram"></use>
                     </svg></a></li>
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#twitter"></use>
+                      <use href="./images/svg/sprite.svg#twitter"></use>
                     </svg></a></li>
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#facebook"></use>
+                      <use href="./images/svg/sprite.svg#facebook"></use>
                     </svg></a></li>
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#linkedin"></use>
+                      <use href="./images/svg/sprite.svg#linkedin"></use>
                     </svg></a></li>
               </ul>
             </li>
             <li class="item">
-              <img class="member-foto" src="./images/photo3.jpg" alt="Фото Николая Тарасова" width="270" />
+              <img class="member-foto"
+              srcset="
+              ./images/mobile/mobile-photo-3.jpg 450w,
+              ./images/mobile/mobile-photo-3@2x.jpg 900w,
+              ./images/tablet/tablet-photo-3.jpg 354w,
+              ./images/tablet/tablet-photo-3@2x.jpg 708w,
+              ./images/desktop/desktop-photo-3.jpg 270w,
+              ./images/desktop/desktop-photo-3@2x.jpg 540w"
+              src="./images/mobile/mobile-photo-3.jpg" alt="Фото Николая Тарасова" 
+              sizes="(min-width: 768px) 25vw, (min-width: 480px) 50vw" />
               <h3 class="member-name title">Николай Тарасов</h3>
               <p class="member-position" lang="en">Marketing</p>
               <ul class="list social-list">
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#instagram"></use>
+                      <use href="./images/svg/sprite.svg#instagram"></use>
                     </svg></a></li>
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#twitter"></use>
+                      <use href="./images/svg/sprite.svg#twitter"></use>
                     </svg></a></li>
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#facebook"></use>
+                      <use href="./images/svg/sprite.svg#facebook"></use>
                     </svg></a></li>
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#linkedin"></use>
+                      <use href="./images/svg/sprite.svg#linkedin"></use>
                     </svg></a></li>
               </ul>
             </li>
             <li class="item">
-              <img class="member-foto" src="./images/photo4.jpg" alt="Фото Михаила Ермакова" width="270" />
+              <img class="member-foto" 
+              srcset="
+              ./images/mobile/mobile-photo-4.jpg 450w,
+              ./images/mobile/mobile-photo-4@2x.jpg 900w,
+              ./images/tablet/tablet-photo-4.jpg 354w,
+              ./images/tablet/tablet-photo-4@2x.jpg 708w,
+              ./images/desktop/desktop-photo-4.jpg 270w,
+              ./images/desktop/desktop-photo-4@2x.jpg 540w"
+              src="./images/mobile/mobile-photo-4.jpg" alt="Фото Михаила Ермакова" 
+              sizes="(min-width: 768px) 25vw, (min-width: 480px) 50vw" />
               <h3 class="member-name title">Михаил Ермаков</h3>
               <p class="member-position" lang="en">UI Designer</p>
               <ul class="list social-list">
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#instagram"></use>
+                      <use href="./images/svg/sprite.svg#instagram"></use>
                     </svg></a></li>
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#twitter"></use>
+                      <use href="./images/svg/sprite.svg#twitter"></use>
                     </svg></a></li>
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#facebook"></use>
+                      <use href="./images/svg/sprite.svg#facebook"></use>
                     </svg></a></li>
                 <li class="social-item"><a class="link social-link" href=""><svg class="social-icon" width="20" height="20">
-                      <use href="./images/sprite.svg#linkedin"></use>
+                      <use href="./images/svg/sprite.svg#linkedin"></use>
                     </svg></a></li>
               </ul>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       
-      <!-- <section class="clients-section">
+      <section class="clients-section">
         <div class="container">
           <h2 class="title section-title clients-title">Постоянные клиенты</h2>
           <ul class="list clients-list">
-            <li class="clients-item"><a href="" class="client-link"><svg class="clients-icon" width="45" height="50">
-                  <use href="./images/sprite.svg#logo-1"></use>
+            <li class="item"><a href="" class="client-link"><svg class="clients-icon" width="45" height="50">
+                  <use href="./images/svg/sprite.svg#logo-1"></use>
                 </svg></a></li>
-            <li class="clients-item"><a href="" class="client-link"><svg class="clients-icon" width="40" height="52">
-                  <use href="./images/sprite.svg#logo-2"></use>
+            <li class="item"><a href="" class="client-link"><svg class="clients-icon" width="40" height="52">
+                  <use href="./images/svg/sprite.svg#logo-2"></use>
                 </svg></a></li>
-            <li class="clients-item"><a href="" class="client-link"><svg class="clients-icon" width="41" height="43">
-                  <use href="./images/sprite.svg#logo-3"></use>
+            <li class="item"><a href="" class="client-link"><svg class="clients-icon" width="41" height="43">
+                  <use href="./images/svg/sprite.svg#logo-3"></use>
                 </svg></a></li>
-            <li class="clients-item"><a href="" class="client-link"><svg class="clients-icon" width="80" height="42">
-                  <use href="./images/sprite.svg#logo-4"></use>
+            <li class="item"><a href="" class="client-link"><svg class="clients-icon" width="80" height="42">
+                  <use href="./images/svg/sprite.svg#logo-4"></use>
                 </svg></a></li>
-            <li class="clients-item"><a href="" class="client-link"><svg class="clients-icon" width="59" height="47">
-                  <use href="./images/sprite.svg#logo-5"></use>
+            <li class="item"><a href="" class="client-link"><svg class="clients-icon" width="59" height="47">
+                  <use href="./images/svg/sprite.svg#logo-5"></use>
                 </svg></a></li>
-            <li class="clients-item"><a href="" class="client-link"><svg class="clients-icon" width="89" height="45">
-                  <use href="./images/sprite.svg#logo-6"></use>
+            <li class="item"><a href="" class="client-link"><svg class="clients-icon" width="89" height="45">
+                  <use href="./images/svg/sprite.svg#logo-6"></use>
                 </svg></a></li>
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
 
     <!-- <footer class="footer">
       <div class="container footer-container">
@@ -292,16 +328,16 @@
           <h3 class="title connect">присоединяйтесь</h3>
           <ul class="list social-list">
             <li class="social-item "><a class="link gray-bg social-link" href=""><svg class="social-icon footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#instagram"></use>
+                  <use href="./images/svg/sprite.svg#instagram"></use>
                 </svg></a></li>
             <li class="social-item"><a class="link gray-bg social-link" href=""><svg class="social-icon footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#twitter"></use>
+                  <use href="./images/svg/sprite.svg#twitter"></use>
                 </svg></a></li>
             <li class="social-item"><a class="link gray-bg social-link" href=""><svg class="social-icon footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#facebook"></use>
+                  <use href="./images/svg/sprite.svg#facebook"></use>
                 </svg></a></li>
             <li class="social-item"><a class="link gray-bg social-link" href=""><svg class="social-icon footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#linkedin"></use>
+                  <use href="./images/svg/sprite.svg#linkedin"></use>
                 </svg></a></li>
           </ul>
         </div>
@@ -312,7 +348,7 @@
             <input type="email" name="mail" id="e-mail" placeholder="E-mail">
             <button class="subscribe-btn btn" type="submit">Подписаться
               <svg class="icon-send" width="24" height="24">
-                <use href="./images/sprite.svg#icon-send"></use>
+                <use href="./images/svg/sprite.svg#icon-send"></use>
               </svg>
             </button>
           </div>
