--- a/portfolio.html
+++ b/portfolio.html
@@ -38,13 +38,13 @@
       <section class="portfolio-section">
         <div class="container">
           <h1 hidden>Портфолио</h1>
-          <!-- <ul class="filter list">
+          <ul class="filter list">
             <li class="item"><button class="portfolio-btn btn" type="button">Все</button></li>
             <li class="item"><button class="portfolio-btn btn" type="button">Веб-сайты</button></li>
             <li class="item"><button class="portfolio-btn btn" type="button">Приложения</button></li>
             <li class="item"><button class="portfolio-btn btn" type="button">Дизайн</button></li>
             <li class="item"><button class="portfolio-btn btn" type="button">Маркетинг</button></li>
-          </ul> -->
+          </ul>
           <ul class="portfolio-list list">
             <li class="item"><a class="link portfolio-box" href="">
               <div class="thumb"><img 
