--- a/index.html
+++ b/index.html
@@ -153,21 +153,21 @@
               <li class="item">
                 <img srcset="
                 ./images/desktop/1.jpg 1x, 
-                ./images/desktop/1@2x.jpg 2x," 
-                src="./images/desktop/1.jpg" alt="Планшет с клавиатурой" width="370" />
+                ./images/desktop/1@2x.jpg 2x"
+                src="./images/desktop/1.jpg" alt="Планшет с клавиатурой" width="370"/>
                 <div class="lable"><p class="lable-text">Десктопные приложения</p></div>
               </li>
               <li class="item">
                 <img srcset="
                 ./images/desktop/2.jpg 1x, 
-                ./images/desktop/2@2x.jpg 2x," 
+                ./images/desktop/2@2x.jpg 2x"
                 src="./images/desktop/2.jpg" alt="Ноутбук" width="370" />
                 <div class="lable"><p class="lable-text">Мобильные приложения</p></div>
               </li>
               <li class="item">
                 <img srcset="
                 ./images/desktop/3.jpg 1x, 
-                ./images/desktop/3@2x.jpg 2x," 
+                ./images/desktop/3@2x.jpg 2x"
                 src="./images/desktop/3.jpg" alt="Маленький планшет" width="370" />
                 <div class="lable"><p class="lable-text">Дизайнерские решения</p></div>
                 
