--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                 ./images/tablet/tablet-portfolio-1.jpg 354w,
                 ./images/tablet/tablet-portfolio-1@2x.jpg 708w,
                 ./images/desktop/desktop-portfolio1.jpg 370w,
-                ./images/desktop/desktop-portfolio1@2x.jpg 740w,"
+                ./images/desktop/desktop-portfolio1@2x.jpg 740w"
                 src="./images/mobile/mobile-portfolio-1.jpg" 
                 sizes="(min-width: 768px) 33vw, (min-width: 480px) 50vw" 
                 alt="Компьютер с фото" >
@@ -83,7 +83,7 @@
                 ./images/tablet/tablet-portfolio-2.jpg 354w,
                 ./images/tablet/tablet-portfolio-2@2x.jpg 708w,
                 ./images/desktop/desktop-portfolio2.jpg 370w,
-                ./images/desktop/desktop-portfolio2@2x.jpg 740w,"
+                ./images/desktop/desktop-portfolio2@2x.jpg 740w"
                 src="./images/mobile/mobile-portfolio-1.jpg" 
                 sizes="(min-width: 768px) 33vw, (min-width: 480px) 50vw" 
                 alt="Баскетболисты" >
@@ -104,7 +104,7 @@
                 ./images/tablet/tablet-portfolio-3.jpg 354w,
                 ./images/tablet/tablet-portfolio-3@2x.jpg 708w,
                 ./images/desktop/desktop-portfolio3.jpg 370w,
-                ./images/desktop/desktop-portfolio3@2x.jpg 740w,"
+                ./images/desktop/desktop-portfolio3@2x.jpg 740w"
                 src="./images/mobile/mobile-portfolio-1.jpg" 
                 sizes="(min-width: 768px) 33vw, (min-width: 480px) 50vw" 
                 alt="Логотип" >
@@ -125,7 +125,7 @@
                 ./images/tablet/tablet-portfolio-4.jpg 354w,
                 ./images/tablet/tablet-portfolio-4@2x.jpg 708w,
                 ./images/desktop/desktop-portfolio4.jpg 370w,
-                ./images/desktop/desktop-portfolio4@2x.jpg 740w,"
+                ./images/desktop/desktop-portfolio4@2x.jpg 740w"
                 src="./images/mobile/mobile-portfolio-1.jpg" 
                 sizes="(min-width: 768px) 33vw, (min-width: 480px) 50vw" 
                 alt="Наушники">
@@ -146,7 +146,7 @@
                 ./images/tablet/tablet-portfolio-5.jpg 354w,
                 ./images/tablet/tablet-portfolio-5@2x.jpg 708w,
                 ./images/desktop/desktop-portfolio5.jpg 370w,
-                ./images/desktop/desktop-portfolio5@2x.jpg 740w,"
+                ./images/desktop/desktop-portfolio5@2x.jpg 740w"
                 src="./images/mobile/mobile-portfolio-1.jpg" 
                 sizes="(min-width: 768px) 33vw, (min-width: 480px) 50vw" 
                 alt="Коробки" >
@@ -167,7 +167,7 @@
                 ./images/tablet/tablet-portfolio-6.jpg 354w,
                 ./images/tablet/tablet-portfolio-6@2x.jpg 708w,
                 ./images/desktop/desktop-portfolio6.jpg 370w,
-                ./images/desktop/desktop-portfolio6@2x.jpg 740w,"
+                ./images/desktop/desktop-portfolio6@2x.jpg 740w"
                 src="./images/mobile/mobile-portfolio-1.jpg" 
                 sizes="(min-width: 768px) 33vw, (min-width: 480px) 50vw" 
                 alt="Макинтош" >
@@ -188,7 +188,7 @@
                 ./images/tablet/tablet-portfolio-7.jpg 354w,
                 ./images/tablet/tablet-portfolio-7@2x.jpg 708w,
                 ./images/desktop/desktop-portfolio7.jpg 370w,
-                ./images/desktop/desktop-portfolio7@2x.jpg 740w,"
+                ./images/desktop/desktop-portfolio7@2x.jpg 740w"
                 src="./images/mobile/mobile-portfolio-1.jpg" 
                 sizes="(min-width: 768px) 33vw, (min-width: 480px) 50vw" 
                 alt="Книга" >
@@ -209,7 +209,7 @@
                 ./images/tablet/tablet-portfolio-8.jpg 354w,
                 ./images/tablet/tablet-portfolio-8@2x.jpg 708w,
                 ./images/desktop/desktop-portfolio8.jpg 370w,
-                ./images/desktop/desktop-portfolio8@2x.jpg 740w,"
+                ./images/desktop/desktop-portfolio8@2x.jpg 740w"
                 src="./images/mobile/mobile-portfolio-1.jpg" 
                 sizes="(min-width: 768px) 33vw, (min-width: 480px) 50vw" 
                 alt="Бирка" >
@@ -230,7 +230,7 @@
                 ./images/tablet/tablet-portfolio-9.jpg 354w,
                 ./images/tablet/tablet-portfolio-9@2x.jpg 708w,
                 ./images/desktop/desktop-portfolio9.jpg 370w,
-                ./images/desktop/desktop-portfolio9@2x.jpg 740w,"
+                ./images/desktop/desktop-portfolio9@2x.jpg 740w"
                 src="./images/mobile/mobile-portfolio-1.jpg" 
                 sizes="(min-width: 768px) 33vw, (min-width: 480px) 50vw" 
                 alt="Ноутбук" >
