--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="container flex-box">
         <div class="footer-container">
           <div class="contacts-container">
           
