--- a/portfolio.html
+++ b/portfolio.html
@@ -250,7 +250,7 @@
     </main>
     
     <footer class="footer">
-      <div class="container">
+      <div class="container flex-box">
         <div class="footer-container">
           <div class="contacts-container">
     
