portfolio photo size

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,7 @@
           <ul class="portfolio-list list">
             <li class="item"><a class="link portfolio-box" href="">
               <div class="thumb"><img 
+                class="portfolio-photo"
                 srcset="
                 ./images/mobile/mobile-portfolio-1.jpg 450w,
                 ./images/mobile/mobile-portfolio-1@2x.jpg 900w,
@@ -77,6 +78,7 @@
             </li>
             <li class="item"><a class="link portfolio-box" href="">
               <div class="thumb"><img 
+                class="portfolio-photo"
                 srcset="
                 ./images/mobile/mobile-portfolio-2.jpg 450w,
                 ./images/mobile/mobile-portfolio-2@2x.jpg 900w,
@@ -98,6 +100,7 @@
             </li>
             <li class="item"><a class="link portfolio-box" href="">
               <div class="thumb"><img 
+                class="portfolio-photo"
                 srcset="
                 ./images/mobile/mobile-portfolio-3.jpg 450w,
                 ./images/mobile/mobile-portfolio-3@2x.jpg 900w,
@@ -119,6 +122,7 @@
             </li>
             <li class="item"><a class="link portfolio-box" href="">
               <div class="thumb"><img 
+                class="portfolio-photo"
                 srcset="
                 ./images/mobile/mobile-portfolio-4.jpg 450w,
                 ./images/mobile/mobile-portfolio-4@2x.jpg 900w,
@@ -140,6 +144,7 @@
             </li>
             <li class="item"><a class="link portfolio-box" href="">
               <div class="thumb"><img 
+                class="portfolio-photo"
                 srcset="
                 ./images/mobile/mobile-portfolio-5.jpg 450w,
                 ./images/mobile/mobile-portfolio-5@2x.jpg 900w,
@@ -161,6 +166,7 @@
             </li>
             <li class="item"><a class="link portfolio-box" href="">
               <div class="thumb"><img 
+                class="portfolio-photo"
                 srcset="
                 ./images/mobile/mobile-portfolio-6.jpg 450w,
                 ./images/mobile/mobile-portfolio-6@2x.jpg 900w,
@@ -182,6 +188,7 @@
             </li>
             <li class="item"><a class="link portfolio-box" href="">
               <div class="thumb"><img 
+                class="portfolio-photo"
                 srcset="
                 ./images/mobile/mobile-portfolio-7.jpg 450w,
                 ./images/mobile/mobile-portfolio-7@2x.jpg 900w,
@@ -203,6 +210,7 @@
             </li>
             <li class="item"><a class="link portfolio-box" href="">
               <div class="thumb"><img 
+                class="portfolio-photo"
                 srcset="
                 ./images/mobile/mobile-portfolio-8.jpg 450w,
                 ./images/mobile/mobile-portfolio-8@2x.jpg 900w,
@@ -224,6 +232,7 @@
             </li>
             <li class="item"><a class="link portfolio-box" href="">
               <div class="thumb"><img 
+                class="portfolio-photo"
                 srcset="
                 ./images/mobile/mobile-portfolio-9.jpg 450w,
                 ./images/mobile/mobile-portfolio-9@2x.jpg 900w,
