--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
               </ul>
               <label class="rules-accept-container">
                 <input class="original-chekbox" type="checkbox" name="rules-accept" value="rules">
-                <span class="checkbox-icon"></span>Соглашаюсь с рассылкой и принимаю <a class="link rules-link" href="">Условия
-                  договора</a>
+                <span class="chekbox-icon">Соглашаюсь с рассылкой и принимаю <a class="link rules-link" href="">Условия
+                  договора</a></span>
+                
               </label>
               <button class="btn send-btn" type="submit">Отправить</button>
             </div>
